Price calc added
